RESOLVED FIXED75865
Compilation errors on build-webkit --debug --no-svg --no-svg-fonts --no-svg-dom-objc-bindings on mac.
https://bugs.webkit.org/show_bug.cgi?id=75865
Summary Compilation errors on build-webkit --debug --no-svg --no-svg-fonts --no-svg-d...
Pablo Flouret
Reported 2012-01-09 10:22:48 PST
build-webkit --debug --no-svg --no-svg-fonts --no-svg-dom-objc-bindings doesn't compile on a mac.
Attachments
proposed patch (8.21 KB, patch)
2012-01-09 10:34 PST, Pablo Flouret
no flags
Pablo Flouret
Comment 1 2012-01-09 10:34:36 PST
Created attachment 121682 [details] proposed patch
WebKit Review Bot
Comment 2 2012-01-16 03:29:04 PST
Comment on attachment 121682 [details] proposed patch Clearing flags on attachment: 121682 Committed r105049: <http://trac.webkit.org/changeset/105049>
WebKit Review Bot
Comment 3 2012-01-16 03:29:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.