Fix compilation errors on build-webkit --debug --no-svg --no-svg-fonts --no-svg-dom-objc-bindings on mac. https://bugs.webkit.org/show_bug.cgi?id=75865

Patch by Pablo Flouret <pablof@motorola.com> on 2012-01-16
Reviewed by Hajime Morita.

Source/WebCore:

* WebCore.exp.in:
* css/CSSStyleApplyProperty.cpp:
(WebCore::ApplyPropertyDisplay::isValidDisplayValue):
* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::setContainerSizeForRenderer):
(WebCore::CachedImage::imageSizeForRenderer):
* platform/graphics/FontFastPath.cpp:
(WebCore::Font::drawGlyphBuffer):
* rendering/FilterEffectRenderer.cpp:
* svg/SVGElementInstance.idl:

Source/WebKit/mac:

* WebView/WebFrame.mm:
(-[WebFrame _pauseSVGAnimation:onSMILNode:atTime:]):

Canonical link: https://commits.webkit.org/93182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105049 268f45cc-cd09-0410-ab3c-d52691b4dbfc